--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,6 @@ a{
     padding-top: 0;
 }
 .main_cover .content{
-    max-width: 300px;
-    width: 100%;
     margin: 0 auto;
     padding-bottom: 2em;
 }
@@ -76,7 +74,10 @@ p{
     font-weight: 700;
 }
 .points{
-    line-height: 17px;
+    line-height: 20px;
+    max-width: 200px;
+    margin: 0 auto;
+    text-align: left;
 }
 .points p{
     font-size: 0.9em;
