--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background-image: url("../images/background-image.png");
+    background-image: url("../images/Black\ Background.gif");
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,7 +22,7 @@ a{
     --yellow: #ffc000;
 }
 .main_cover{
-    background: radial-gradient(rgb(255, 237, 134) , rgb(255, 228, 75));
+    background: rgb(174, 85, 247);
     border-radius: 5em;
     max-width: 650px;
     width: 95%;
@@ -37,7 +37,7 @@ a{
     padding-bottom: 2em;
 }
 .main_cover .logo_cover{
-    max-width: 230px;
+    max-width: 290px;
     margin: 0 auto;
     background-color: #1c3768;
     padding: 25px 20px 20px 20px;
