the whole page liked to the main landing page

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ a{
     --yellow: #ffc000;
 }
 .main_cover{
-    background-color: #1c3768;
+    background-color: #18aad6;
     border-radius: 5em;
     max-width: 650px;
     width: 95%;
